--- a/src/main/resources/templates/second.mustache
+++ b/src/main/resources/templates/second.mustache
@@ -1,13 +1,9 @@
-<!doctype html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
-    <h1>{{page}} 페이지입니다! {{username}}님!</h1>
-</body>
-</html>
+{{>layouts/header}}
+
+    <!-- content -->
+    <div class="bg-dark text-white p-5">
+        <h1>{{username}}님, {{page}} 페이지 입니다!</h1>
+    </div>
+
+
+{{>layouts/footer}}
