--- a/src/main/resources/templates/articles/new.mustache
+++ b/src/main/resources/templates/articles/new.mustache
@@ -10,6 +10,7 @@
         <textarea type="text" class="form-control" name="content"></textarea>
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
+    <a href="/articles">목록보기</a>
 </form>
 
 {{>layouts/footer}}
