--- a/src/main/resources/templates/articles/show.mustache
+++ b/src/main/resources/templates/articles/show.mustache
@@ -17,5 +17,6 @@
     {{/article}}
     </tbody>
 </table>
-<a href="/articles">목록보기</a>
+<a href="/articles/{{article.id}}/edit" class="btn btn-primary">Edit</a>
+<a href="/articles" class="btn btn-primary">목록보기</a>
 {{>layouts/footer}}
