데이터 삭제까지 완료

--- a/src/main/resources/templates/layouts/header.mustache
+++ b/src/main/resources/templates/layouts/header.mustache
@@ -48,3 +48,10 @@
         </div>
     </div>
 </nav>
+<!-- alert msg code -->
+    {{#msg}}
+    <div class = "alert alert-primary alert-dismissible">
+        {{msg}}
+        <button type = "button" class="btn-close" date-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+    {{/msg}}
