--- a/src/main/resources/templates/articles/show.mustache
+++ b/src/main/resources/templates/articles/show.mustache
@@ -20,4 +20,7 @@
 <a href="/articles/{{article.id}}/edit" class="btn btn-primary">Edit</a>
 <a href="/articles/{{article.id}}/delete" class="btn btn-danger">Delete</a>
 <a href="/articles" class="btn btn-primary">목록보기</a>
+
+{{>comments/_comments}}
+
 {{>layouts/footer}}
