댓글서비스 자바스크립트로 객체 생성

--- a/src/main/resources/templates/comments/_new.mustache
+++ b/src/main/resources/templates/comments/_new.mustache
@@ -24,3 +24,22 @@
     </div>
 
 </div>
+
+<script>
+{
+    //댓글 생성 버튼 변수화
+    const commentCreateBtn = document.querySelector("#comment-create-btn");
+
+    //버튼 클릭 이벤트 감지!
+    commentCreateBtn.addEventListener("click",function() {
+        //새 댓글 객체 생성
+        const comment = {
+            nickname: document.querySelector("#new-comment-nickname").value,
+            body: document.querySelector("#new-comment-body").value,
+            articleId: document.querySelector("#new-comment-article-id").value
+        };
+        //댓글 객체 출력
+        console.log(comment);
+    });
+}
+</script>
