댓글서비스 댓글 수정 버튼 생성 및 이벤트 처리-1

--- a/src/main/resources/templates/comments/_list.mustache
+++ b/src/main/resources/templates/comments/_list.mustache
@@ -3,6 +3,13 @@
         <div class ="card m-2" id = "comments-{{id}}">
             <div class="card-header">
                 {{nickname}}
+                <!-- Button trigger modal -->
+                <button type="button" class="btn btn-sm btn-outline-primary" data-bs-toggle="modal" data-bs-target="#comment-edit-modal" data-bs-id="{{id}}"
+                        data-bs-nickname="{{nickname}}"
+                        data-bs-body="{{body}}"
+                        data-bs-article-id="{{articleId}}">
+                    수정
+                </button>
             </div>
             <div class="card-body">
                 {{body}}
@@ -11,3 +18,50 @@
 
     {{/commentDtos}}
 </div>
+
+<!-- Modal -->
+<div class="modal fade" id="comment-edit-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form>
+                    <!--닉네임 입력 -->
+                    <div class="mb-5">
+                        <label class="form-label">닉네임</label>
+                        <input class="form-control form-control-sm" id="edit-comment-nickname">
+                    </div>
+                    <!--댓글 입력 -->
+                    <div class="mb-5">
+                        <label class="form-label">댓글 내용</label>
+                        <textarea class="form-control form-control-sm" id="edit-comment-body"></textarea>
+                    </div>
+
+                    <!--히든 인풋 -->
+                    <input type="hidden" id = "new-comment-id">
+                    <input type="hidden" id = "new-comment-article-id">
+
+
+                    <!--전송 버튼-->
+                    <button type="button" class="btn btn-outline-primary btn-sm" id="comment-update-btn">댓글 수정 완료</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- 모달 이벤트 처리 -->
+<script>
+{
+    //모달 요소 선택
+    const commentEditModal = document.querySelector("#comment-edit-modal");
+
+    //모달 이벤트 감지
+    commentEditModal.addEventListener("show.bs.modal",function(event){
+        console.log("모달이 열렸습니다.");
+    });
+}
+</script>
