댓글서비스 자바스크립트로 객체 생성 마무리 api로 데이터 전송 및 수정 후 화면 reload

--- a/src/main/resources/templates/comments/_list.mustache
+++ b/src/main/resources/templates/comments/_list.mustache
@@ -70,7 +70,7 @@
         const id = triggerBtn.getAttribute("data-bs-id");
         const nickname = triggerBtn.getAttribute("data-bs-nickname");
         const body = triggerBtn.getAttribute("data-bs-body");
-        const articleId = triggerBtn.getAttribute("data-bs-articleId");
+        const articleId = triggerBtn.getAttribute("data-bs-article-id");
 
         //데이터를 반영
         document.querySelector("#edit-comment-nickname").value = nickname;
@@ -78,5 +78,41 @@
         document.querySelector("#edit-comment-id").value = id;
         document.querySelector("#edit-comment-article-id").value = articleId;
     });
+}
+
+{
+    //수정 완료 버튼
+    const commentUpdateBtn = document.querySelector("#comment-update-btn");
+
+    //클릭 이벤트 감지 및 처리
+    commentUpdateBtn.addEventListener("click",function(){
+        //수정 댓글 객체 생성
+        const comment = {
+            id:document.querySelector("#edit-comment-id").value,
+            nickname:document.querySelector("#edit-comment-nickname").value,
+            body:document.querySelector("#edit-comment-body").value,
+            article_id:document.querySelector("#edit-comment-article-id").value
+        }
+
+        console.log(comment);
+
+        //수정 Rest Api 호출 -fetch()
+
+        const url = "/api/comment/"+comment.id;
+        fetch(url,{
+            method:"PATCH",
+            body:JSON.stringify(comment), //수정된 댓글 객체를 JSON으로 전달
+            headers:{
+                "Content-Type" : "application/json"
+            }
+        }).then(response => {
+            //http 응답 코드에 따른 메세지 출력
+            const msg = (response.ok) ? "댓글이 수정 되었습니다." : "댓글 수정 실패..!";
+            alert(msg);
+
+            //현재 페이지를 새로고침
+            window.location.reload();
+        });
+    })
 }
 </script>
