댓글 서비스 삭제 서비스 완료

--- a/src/main/resources/templates/comments/_list.mustache
+++ b/src/main/resources/templates/comments/_list.mustache
@@ -11,8 +11,9 @@
                     수정
                 </button>
 
-                <!--댓글 삭제 버튼튼 -->
-               <button type="button" class="btn btn-sm btn-outline-danger comment-delete-btn">삭제</button>
+                <!--댓글 삭제 버튼 -->
+               <button type="button" class="btn btn-sm btn-outline-danger comment-delete-btn"
+                    data-comment-id="{{id}}">삭제</button>
             </div>
             <div class="card-body">
                 {{body}}
@@ -128,8 +129,30 @@
 
     //삭제 버튼 이벤트 처리
     commentDeleteBtns.forEach(btn => {
-        btn.addEventListener("click", () => {
-            console.log("삭제 버튼이 클릭되었습니다...!");
+        btn.addEventListener("click", (event) =>{
+
+        //이벤트 발생 요소를 선택
+       const commentDeleteBtn = event.srcElement;
+
+       //삭제 댓글 id 가져오기
+       const commentId = commentDeleteBtn.getAttribute("data-comment-id");
+
+       //삭제 API 호출 및 처리
+       const url = `/api/comment/${commentId}`;
+       fetch(url, {
+            method: "DELETE"
+            }).then(response => {
+                //댓글 삭제 실패 처리
+                if(!response.ok){
+                    alert("댓글 삭제 실패 ..!");
+                    return;
+                }
+
+                //삭제 성공시 댓글 지우기
+
+                const target = document.querySelector(`#comments-${commentId}`);
+                target.remove();
+            });
         });
     });
 }
